--- a/frontend/src/pages/Dash/dashboard.module.css
+++ b/frontend/src/pages/Dash/dashboard.module.css
@@ -1,7 +1,7 @@
 .main{
     width: 100%;
     height: 1200px;
-    background-color: blueviolet;
+    background-color: rgb(36, 1, 70);
     display: flex;
     flex-direction: column;
     
